--- a/Unidad7_RuidoEstadio/cliente/style.css
+++ b/Unidad7_RuidoEstadio/cliente/style.css
@@ -1,12 +1,17 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #000;
-  color: white;
-  font-family: Arial, sans-serif;
+  background-color: #111;
+  color: #fff;
+  font-family: sans-serif;
+  text-align: center;
 }
 
 canvas {
   display: block;
   margin: 0 auto;
+}
+
+main {
+  margin-top: 20px;
 }
